--- a/src/commands/load-and-push-image.yml
+++ b/src/commands/load-and-push-image.yml
@@ -40,10 +40,6 @@ parameters:
     description: |
       Enable dockerhub authentication. Defaults to false.
     type: boolean
-  dockerfile:
-    default: Dockerfile
-    description: Name of dockerfile to use. Defaults to Dockerfile.
-    type: string
   dockerhub-password:
     default: DOCKERHUB_PASSWORD
     description: >
@@ -61,32 +57,16 @@ parameters:
   env-var-file:
     default: '/tmp/workspace/custom-env-vars'
     description: >-
-      Path to the custom env var file
-      Defaults to /tmp/workspace/custom-env-vars
-    type: string
-  extra-build-args:
-    default: ''
-    description: >
-      Extra flags to pass to docker build. For examples, see
-      https://docs.docker.com/engine/reference/commandline/build
+      Path to a custom env var file which will be passed to >> $BASH_ENV
+      Ideal for passing environment variables from earlier jobs
+      Most useful for Image tagging
+      Defaults to '/tmp/workspace/custom-env-vars'.
     type: string
   image-file:
     default: '/tmp/workspace/image.tar'
     description: >-
       Path to your image.tar file.
       Defaults to '/tmp/workspace/image.tar'.
-    type: string
-  no-output-timeout:
-    default: 10m
-    description: >
-      The amount of time to allow the docker build command to run before timing
-      out (default is `10m`)
-    type: string
-  path:
-    default: .
-    description: >-
-      Path to the directory containing your Dockerfile and build context.
-      Defaults to . (working directory).
     type: string
   profile-name:
     default: default
@@ -121,33 +101,40 @@ parameters:
       Setup and use CircleCI's remote Docker environment for Docker and
       docker-compose commands? Not required if using the default executor
     type: boolean
-  skip-when-tags-exist:
-    default: false
-    description: Whether to skip image building if all specified tags already exist in ECR
-    type: boolean
   tag:
     default: latest
     description: >-
       A comma-separated string containing docker image tags to build and push
       (default = latest)
     type: string
-  workspace-root:
-    default: .
-    description: >
-      Workspace root path that is either an absolute path or a path relative to
-      the working directory. Defaults to '.' (the working directory)
-    type: string
 steps:
-  - when:
-      condition: <<parameters.checkout>>
-      steps:
-        - checkout
-  - when:
-      condition: <<parameters.setup-remote-docker>>
-      steps:
-        - setup_remote_docker:
-            docker_layer_caching: <<parameters.remote-docker-layer-caching>>
-            version: <<parameters.remote-docker-version>>
+  # - when:
+  #     condition: <<parameters.checkout>>
+  #     steps:
+  #       - checkout
+  # - when:
+  #     condition: <<parameters.attach-workspace>>
+  #     steps:
+  #       - attach_workspace:
+  #           at: <<parameters.workspace-root>>
+  # - when:
+  #     condition: <<parameters.env-var-file>>
+  #     steps:
+  #       - run:
+  #           name: Restore custom env vars if necessary
+  #           command: |
+  #             if [ -e "<<parameters.env-var-file>>"]; then
+  #               cat <<parameters.env-var-file>> >> $BASH_ENV
+  #             else
+  #               echo "no custom env-var-file found. skipping"
+  #             fi
+
+  # - when:
+  #     condition: <<parameters.setup-remote-docker>>
+  #     steps:
+  #       - setup_remote_docker:
+  #           docker_layer_caching: <<parameters.remote-docker-layer-caching>>
+  #           version: <<parameters.remote-docker-version>>
   - aws-ecr/ecr-login:
       account-url: <<parameters.account-url>>
       aws-access-key-id: <<parameters.aws-access-key-id>>
