--- a/src/jobs/load-and-push-container-to-aws.yml
+++ b/src/jobs/load-and-push-container-to-aws.yml
@@ -60,6 +60,10 @@ parameters:
       Most useful for Image tagging
       Defaults to '/tmp/workspace/custom-env-vars'.
     type: string
+  executor:
+    type: executor
+    default: default
+    description: executor to use for this job
   image-file:
     default: '/tmp/workspace/image.tar'
     description: >-
@@ -142,7 +146,7 @@ steps:
             docker_layer_caching: <<parameters.remote-docker-layer-caching>>
             version: <<parameters.remote-docker-version>>
 
-  - aws-ecr-extra/load-and-push-image:
+  - load-and-push-image:
       account-url: <<parameters.account-url>>
       aws-access-key-id: <<parameters.aws-access-key-id>>
       aws-secret-access-key: <<parameters.aws-secret-access-key>>
