--- a/src/executors/default.yml
+++ b/src/executors/default.yml
@@ -4,7 +4,7 @@ description: >
 parameters:
   image:
     type: string
-    default: ubuntu-2004:202010-01
+    default: cimg/base:2022.03
   use-docker-layer-caching:
     type: boolean
     default: false
