[semver:patch] Switch to docker executor

--- a/src/executors/default.yml
+++ b/src/executors/default.yml
@@ -12,7 +12,7 @@ parameters:
     type: string
     default: medium
 
-machine:
+docker:
   image: <<parameters.image>>
   docker_layer_caching: <<parameters.use-docker-layer-caching>>
 
