--- a/src/executors/default.yml
+++ b/src/executors/default.yml
@@ -13,7 +13,6 @@ parameters:
     default: medium
 
 docker:
-  image: <<parameters.image>>
-  docker_layer_caching: <<parameters.use-docker-layer-caching>>
+  - image: <<parameters.image>>
 
 resource_class: <<parameters.resource-class>>
