--- a/src/jobs/set-env-var.yml
+++ b/src/jobs/set-env-var.yml
@@ -11,25 +11,25 @@ parameters:
     type: executor
     default: default
     description: executor to use for this job
-  image-tag:
-    default: "1.0"
+  env-var:
     description: >-
-      Base image tag Number
-      Defaults to '1.0'.
+      Envrionment Variable Name
+    type: string
+  env-value:
+    description: >-
+      Envrionment Variable Value
     type: string
   persist-to-workspace:
     description: >-
       Store the current env-var-file using persist_to_workspace.
       Set to false if setting multiple env vars in a job, and set to true on the last one.
-
 executor: <<parameters.executor>>
 steps:
-  - checkout
   - run:
-      name: "Persist CIRCLE_BUILD_NUM environment variables"
+      name: "Preserve environment variable"
       command: |
-        echo "export FULL_IMAGE_TAG='<< parameters.image-tag >>.${CIRCLE_BUILD_NUM}'" >> << parameters.env-var-file >>
-   - when:
+        echo "export << parameters.env-var >>='<< parameters.env-value >>'" >> << parameters.env-var-file >>
+  - when:
       condition: <<parameters.persist-to-workspace>>
       steps:
         - persist_to_workspace:
