--- a/src/jobs/preserve-full-image-tag-version.yml
+++ b/src/jobs/preserve-full-image-tag-version.yml
@@ -21,6 +21,7 @@ parameters:
     description: >-
       Store the current env-var-file using persist_to_workspace.
       Set to false if setting multiple env vars in a job, and set to true on the last one.
+    default: true
 
 executor: <<parameters.executor>>
 steps:
