--- a/src/jobs/set-env-var.yml
+++ b/src/jobs/set-env-var.yml
@@ -18,14 +18,13 @@ parameters:
     default: default
     description: executor to use for this job
   env-var:
-    description: >-
-      Envrionment Variable Name
+    description: Envrionment Variable Name
     type: string
   env-value:
-    description: >-
-      Envrionment Variable Value
+    description: Envrionment Variable Value
     type: string
   persist-to-workspace:
+    type: boolean
     description: >-
       Store the current env-var-file using persist_to_workspace.
       Set to false if setting multiple env vars in a job, and set to true on the last one.
