--- a/src/jobs/set-env-var.yml
+++ b/src/jobs/set-env-var.yml
@@ -43,10 +43,10 @@ steps:
       steps:
         - attach_workspace:
             at: <<parameters.workspace-root>>
-  - run:
-      name: "Preserve environment variable"
-      command: |
-        echo "export << parameters.env-var >>='<< parameters.env-value >>'" >> << parameters.env-var-file >>
+  - set-env-var:
+      env-var: << parameters.env-var >>
+      env-value: << parameters.env-value >>
+      env-var-file: << parameters.env-var-file >>
   - when:
       condition: <<parameters.persist-to-workspace>>
       steps:
