[semver:patch] bugix

--- a/src/jobs/setup-env-vars.yml
+++ b/src/jobs/setup-env-vars.yml
@@ -37,6 +37,6 @@ steps:
       condition: <<parameters.persist-to-workspace>>
       steps:
         - persist_to_workspace:
-            root: .
+            root: /
             paths:
               - << parameters.env-var-file >>
