--- a/src/jobs/setup-env-vars.yml
+++ b/src/jobs/setup-env-vars.yml
@@ -34,7 +34,7 @@ steps:
         echo "export FULL_IMAGE_TAG='<< parameters.full-image-tag >>'" >> << parameters.env-var-file >>
         echo "export REPO='<< parameters.repo >>'" >> << parameters.env-var-file >>
   - run:
-      name: get the workspace root and relative path from <<parameters.cache-dir>>
+      name: get the workspace root and relative path
       command: |
         DIRECTORY="<<parameters.env-var-file>>"
         REMAINING_DIRECTORY=$(echo ${DIRECTORY#/})
