--- a/src/jobs/setup-env-vars.yml
+++ b/src/jobs/setup-env-vars.yml
@@ -50,4 +50,4 @@ steps:
         - persist_to_workspace:
             root: .
             paths:
-              - $REMAINING_DIRECTORY
+              - <<parameters.env-var-file>>
