[semver:patch] switch to machine

--- a/src/executors/default.yml
+++ b/src/executors/default.yml
@@ -15,6 +15,6 @@ parameters:
 
 # docker:
 machine:
-  - image: <<parameters.image>>
+  image: <<parameters.image>>
 
 resource_class: <<parameters.resource-class>>
