[semver:patch] switch to docker

--- a/src/executors/default.yml
+++ b/src/executors/default.yml
@@ -4,8 +4,8 @@ description: >
 parameters:
   image:
     type: string
-    # default: cimg/base:2022.03
-    default: ubuntu-2004:202010-01
+    default: cimg/base:2022.03
+    # default: ubuntu-2004:202010-01
   use-docker-layer-caching:
     type: boolean
     default: false
@@ -13,8 +13,8 @@ parameters:
     type: string
     default: medium
 
-# docker:
-machine:
-  image: <<parameters.image>>
+# machine:
+docker:
+  - image: <<parameters.image>>
 
 resource_class: <<parameters.resource-class>>
