[semver:minor] disable remote-docker call

--- a/src/jobs/load-and-push-container-to-aws.yml
+++ b/src/jobs/load-and-push-container-to-aws.yml
@@ -137,12 +137,12 @@ steps:
                 else
                   echo "no custom env-var-file found. skipping"
                 fi
-  - when:
-      condition: <<parameters.setup-remote-docker>>
-      steps:
-        - setup_remote_docker:
-            docker_layer_caching: <<parameters.remote-docker-layer-caching>>
-            version: <<parameters.remote-docker-version>>
+  # - when:
+  #     condition: <<parameters.setup-remote-docker>>
+  #     steps:
+  #       - setup_remote_docker:
+  #           docker_layer_caching: <<parameters.remote-docker-layer-caching>>
+  #           version: <<parameters.remote-docker-version>>
 
   - load-and-push-image:
       account-url: <<parameters.account-url>>
