--- a/src/jobs/build-container.yml
+++ b/src/jobs/build-container.yml
@@ -173,7 +173,11 @@ steps:
             name: Restore custom env vars if necessary
             command: |
               if [ -e "<<parameters.env-var-file>>" ]; then
+                echo "Restoring custom vars"
+                env|grep IMAGE
                 cat <<parameters.env-var-file>> >> $BASH_ENV
+                env|grep IMAGE
+                cat <<parameters.env-var-file>>
               else
                 echo "no custom env-var-file found. skipping"
               fi
