[semver:patch] bugfix

--- a/src/jobs/setup-env-vars.yml
+++ b/src/jobs/setup-env-vars.yml
@@ -33,6 +33,7 @@ steps:
       command: |
         echo "export FULL_IMAGE_TAG='<< parameters.full-image-tag >>'" >> << parameters.env-var-file >>
         echo "export REPO='<< parameters.repo >>'" >> << parameters.env-var-file >>
+        echo "export GIT_TAG='$(git rev-parse HEAD)'" >> << parameters.env-var-file >>
   - when:
       condition: <<parameters.persist-to-workspace>>
       steps:
