--- a/src/jobs/build-container.yml
+++ b/src/jobs/build-container.yml
@@ -71,12 +71,12 @@ parameters:
       false.
     type: boolean
   env-var-file:
-    default: '/tmp/workspace/custom-env-vars'
+    default: 'custom-env-vars'
     description: >-
-      Path to a custom env var file which will be passed to >> $BASH_ENV
+      name of a custom env var file which will be passed to >> $BASH_ENV
       Ideal for passing environment variables from earlier jobs
       Most useful for Image tagging
-      Defaults to '/tmp/workspace/custom-env-vars'.
+      Defaults to 'custom-env-vars'.
     type: string
   executor:
      type: executor
@@ -167,7 +167,7 @@ steps:
         - attach_workspace:
             at: <<parameters.workspace-root>>
   - restore-custom-env-var:
-      env-var-file: <<parameters.env-var-file>>
+      env-var-file: <<parameters.workspace-root>>/<<parameters.env-var-file>>
   # - when:
   #     condition: <<parameters.setup-remote-docker>>
   #     steps:
