--- a/src/executors/default.yml
+++ b/src/executors/default.yml
@@ -8,7 +8,7 @@ parameters:
     default: ubuntu-2004:202010-01
   use-docker-layer-caching:
     type: boolean
-    default: false
+    default: true
   resource-class:
     type: string
     default: medium
