[semver:patch] Fix attached workspaces in set-env-var

--- a/src/jobs/set-env-var.yml
+++ b/src/jobs/set-env-var.yml
@@ -59,6 +59,6 @@ steps:
       condition: <<parameters.persist-to-workspace>>
       steps:
         - persist_to_workspace:
-            root: < parameters.workspace-root >>
+            root: << parameters.workspace-root >>
             paths:
               - << parameters.env-var-file >>
