--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,15 +11,15 @@ filters: &filters
 workflows:
   lint-pack:
     jobs:
-      - orb-tools/lint:
-          filters: *filters
+      # - orb-tools/lint:
+      #     filters: *filters
       - orb-tools/pack:
           filters: *filters
       - orb-tools/review:
           filters: *filters
-      - shellcheck/check:
-          filters: *filters
-          dir: ./src/scripts
+      # - shellcheck/check:
+      #     filters: *filters
+      #     dir: ./src/scripts
       - orb-tools/publish:
           orb-name: martyzz1/aws-ecr-extra
           vcs-type: << pipeline.project.type >>
