--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,12 +11,13 @@ filters: &filters
 workflows:
   lint-pack:
     jobs:
-      # - orb-tools/lint:
-      #     filters: *filters
+      - orb-tools/lint:
+          filters: *filters
       - orb-tools/pack:
           filters: *filters
       - orb-tools/review:
           filters: *filters
+          exclude: RC009
       # - shellcheck/check:
       #     filters: *filters
       #     dir: ./src/scripts
@@ -24,8 +25,8 @@ workflows:
           orb-name: martyzz1/aws-ecr-extra
           vcs-type: << pipeline.project.type >>
           requires:
+            [orb-tools/lint, orb-tools/review, orb-tools/pack]
             # [orb-tools/lint, orb-tools/review, orb-tools/pack, shellcheck/check]
-            [orb-tools/review, orb-tools/pack]
           # Use a context to hold your publishing token.
           context:
             - orb-publishing
