Add/Remove Debug or minor tweak

--- a/src/jobs/setup-env-vars.yml
+++ b/src/jobs/setup-env-vars.yml
@@ -1,3 +1,4 @@
+description: Sets some standard persisstent env vars used throughout the build process
 parameters:
   env-var-file:
     default: 'custom-env-vars'
