Add missing descriptionsariables

--- a/src/commands/restore-custom-env-var.yml
+++ b/src/commands/restore-custom-env-var.yml
@@ -1,3 +1,4 @@
+description: Command to restore any custom ENV vars from a previous stage
 parameters:
   env-var-file:
     default: 'custom-env-vars'
