Add/Remove Debug or minor tweak

--- a/src/jobs/setup-env-vars.yml
+++ b/src/jobs/setup-env-vars.yml
@@ -34,7 +34,7 @@ environment:
 steps:
   - checkout
   - run:
-      name: "Persist CIRCLE_BUILD_NUM environment variables"
+      name: "Configure & Persist common environment variables"
       command: <<include(scripts/setup-env-vars.sh)>>
   - when:
       condition: <<parameters.persist-to-workspace>>
