--- a/src/jobs/build-and-push-container-to-aws.yml
+++ b/src/jobs/build-and-push-container-to-aws.yml
@@ -152,6 +152,11 @@ parameters:
     description: >
       Workspace root path that is either an absolute path or a path relative
       to the working directory. Defaults to '.' (the working directory)
+  resource_class:
+    type: string
+    default: medium
+resource_class: << parameters.resource_class >>
+
 executor: <<parameters.executor>>
 steps:
   - when:
